# riskcore-cpp

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  riskcore-distributed-extension.md
.github/workflows/: ci.yml
data/: positions.json  prices.csv  returns.csv
scripts/: debug_yfinance.py  fetch_data.py
src/: data_loader.cpp  data_loader.h  main.cpp  models.h  risk_engine.cpp  risk_engine.h  ws_server.cpp  ws_server.h
web/: index.html
